[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://WinZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://grass/grass.png" type="Texture" id=3]
[ext_resource path="res://road/road_middle.png" type="Texture" id=4]
[ext_resource path="res://CarSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://CarDestroyer.tscn" type="PackedScene" id=6]
[ext_resource path="res://road/road_edge.png" type="Texture" id=7]
[ext_resource path="res://water/water_edge.png" type="Texture" id=8]
[ext_resource path="res://water/water_middle.png" type="Texture" id=9]
[ext_resource path="res://World.gd" type="Script" id=10]
[ext_resource path="res://Log.tscn" type="PackedScene" id=11]
[ext_resource path="res://Car1.tscn" type="PackedScene" id=12]
[ext_resource path="res://Car2.tscn" type="PackedScene" id=13]
[ext_resource path="res://BoundryWall.tscn" type="PackedScene" id=14]
[ext_resource path="res://gui/GUI_died.tscn" type="PackedScene" id=15]
[ext_resource path="res://gui/GUI_countdown.tscn" type="PackedScene" id=16]

[sub_resource type="TileSet" id=1]
2/name = "Grass"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 20, 20 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Road Edge"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 20, 20 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Road Middle"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 20, 20 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Water Edge"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 20, 20 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Water Middle"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 20, 20 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 148.979, 25.4072 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 90 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 90 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 160, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 65536, 1073741829, 0, 65537, 1073741829, 0, 65538, 1073741829, 0, 65539, 1073741829, 0, 65540, 1073741829, 0, 65541, 1073741829, 0, 65542, 1073741829, 0, 65543, 1073741829, 0, 65544, 1073741829, 0, 65545, 1073741829, 0, 65546, 1073741829, 0, 65547, 1073741829, 0, 65548, 1073741829, 0, 65549, 1073741829, 0, 65550, 1073741829, 0, 65551, 1073741829, 0, 65552, 1, 0, 65553, 1, 1, 65554, 1, 3, 65555, 1, 1, 65556, 1, 2, 131072, 1073741830, 0, 131073, 1073741830, 0, 131074, 1073741830, 0, 131075, 1073741830, 0, 131076, 1073741830, 0, 131077, 1073741830, 0, 131078, 1073741830, 0, 131079, 1073741830, 0, 131080, 1073741830, 0, 131081, 1073741830, 0, 131082, 1073741830, 0, 131083, 1073741830, 0, 131084, 1073741830, 0, 131085, 1073741830, 0, 131086, 1073741830, 0, 131087, 1073741830, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196624, 1, 0, 196626, 1, 0, 196627, 1, 262146, 196628, 1, 262145, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 393215, 0, 0, 327680, 1610612739, 0, 327681, 1610612739, 0, 327682, 1610612739, 0, 327683, 1610612739, 0, 327684, 1610612739, 0, 327685, 1610612739, 0, 327686, 1610612739, 0, 327687, 1610612739, 0, 327688, 1610612739, 0, 327689, 1610612739, 0, 327690, 1610612739, 0, 327691, 1610612739, 0, 327692, 1610612739, 0, 327693, 1610612739, 0, 327694, 1610612739, 0, 327695, 1610612739, 0, 327696, 0, 0, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 458751, 0, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 0, 0, 393233, 0, 1, 393234, 0, 1, 393235, 0, 1, 393236, 0, 1, 524287, 0, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 0, 0, 458769, 0, 2, 458770, 0, 2, 458771, 0, 2, 458772, 0, 2, 589823, 0, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 0, 0, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 524308, 0, 1, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537 )

[node name="Water" type="Area2D" parent="." groups=[
"water",
]]
position = Vector2( 160, 50 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
shape = SubResource( 2 )

[node name="Spawners" type="YSort" parent="."]
z_index = 1

[node name="CarSpawnerUpper" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( -30, 105 )
scenes = [ ExtResource( 12 ), ExtResource( 13 ) ]
speed = 130.0
rate_max = 3

[node name="CarSpawnerMiddle" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( 350, 125 )
scenes = [ ExtResource( 12 ), ExtResource( 13 ) ]
speed = -130.0
rate_max = 3

[node name="CarSpawnerLower" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( -30, 140 )
scenes = [ ExtResource( 12 ), ExtResource( 13 ) ]
rate_max = 3

[node name="LogSpawnerUpper" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( -30, 30 )
scenes = [ ExtResource( 11 ) ]
speed = 70.0
rate_max = 3

[node name="LogSpawnerMiddle" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( 350, 50 )
scenes = [ ExtResource( 11 ) ]
speed = -70.0
rate_max = 2

[node name="LogSpawnerLower" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( -30, 70 )
scenes = [ ExtResource( 11 ) ]
speed = 70.0
rate_max = 3

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 170 )
z_index = 2

[node name="WinZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="WinZone" index="0"]
position = Vector2( 160.746, -28.4048 )

[node name="CarDestroyer" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="CarDestroyer" index="0"]
position = Vector2( 427.336, 73.8768 )

[node name="CarDestroyer2" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="CarDestroyer2" index="0"]
position = Vector2( -106.92, 69.7017 )

[node name="Walls" type="Node" parent="."]

[node name="BoundryWallLeft" parent="Walls" instance=ExtResource( 14 )]
position = Vector2( 5, 90 )

[node name="CollisionShape2D" parent="Walls/BoundryWallLeft" index="0"]
shape = SubResource( 3 )

[node name="BoundryWallRight" parent="Walls" instance=ExtResource( 14 )]
position = Vector2( 315, 90 )

[node name="CollisionShape2D" parent="Walls/BoundryWallRight" index="0"]
shape = SubResource( 4 )

[node name="BoundryWallBottom" parent="Walls" instance=ExtResource( 14 )]
position = Vector2( 160, 190 )

[node name="CollisionShape2D" parent="Walls/BoundryWallBottom" index="0"]
shape = SubResource( 5 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUI_died" parent="GUI" instance=ExtResource( 15 )]
visible = false

[node name="GUI_countdown" parent="GUI" instance=ExtResource( 16 )]

[node name="GameStartTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]

[editable path="WinZone"]

[editable path="CarDestroyer"]

[editable path="CarDestroyer2"]

[editable path="Walls/BoundryWallLeft"]

[editable path="Walls/BoundryWallRight"]

[editable path="Walls/BoundryWallBottom"]
